@@ -28,7 +28,7 @@ Create the release artifacts in Maven, and deploy them to Sonatype staging repos
 Note that on Java 16, you must specify `--illegal-access=warn` as a `MAVEN_OPTS` otherwise Kotlin fails to build
 
 ```bash
-$ mvn release:prepare release:perform
+$ MAVEN_OPTS="--illegal-access=warn" mvn release:prepare release:perform
 ```
 
 Change the release version if needed, or just press Enter if the suggested version is good.
